--- a/devel/openh323/Portfile
+++ b/devel/openh323/Portfile
@@ -18,8 +18,19 @@ fetch.type			cvs
 cvs.root			:pserver:anonymous@h323plus.cvs.sourceforge.net:/cvsroot/h323plus
 cvs.tag				v[join [split ${version} .] _]
 #cvs.module			h323plus
-
-patchfiles			patch-ptlib-pkgconfig.diff
+patch.pre_args      -p1
+patchfiles			01_libname.patch \
+        			03_Makefile.in.patch \
+        			10_openh323u.mak.patch \
+        			notrace.patch \
+        			printon_with_notrace.patch \
+        			ixjuser.h.patch \
+        			fix_autoconf.patch \
+        			ptlib-pkgconfig.patch \
+        			h263ffmpeg_cxx.patch \
+        			fix_setstate.patch \
+        			fix_openssl_sha1_ctx.patch \
+        			h263caps_accurate_search.patch 
 
 depends_lib			port:ptlib
 
