--- a/devel/ptlib/Portfile
+++ b/devel/ptlib/Portfile
@@ -13,16 +13,16 @@ description			ptlib
 long_description	PTLib 2.10.9 fork for GNU Gatekeeper and H323Plus
 
 patch.pre_args		-p1
-patchfiles			01_fix_sched_yield.patch \
-                    02_install_version.patch
+patchfiles			01_fix_sched_yield.patch 02_install_version.patch 03_fix_ssl.patch
 
 fetch.type			git
 git.url				https://github.com/willamowius/ptlib
-git.branch			3ce47a2fe34b87318832cade60af7e2f7bec72f3
+git.branch			34c617943b707abe46c3c527323e2ac1159f8b35
+
 
 post-destroot {
-    reinplace "s|include \$\(PTLIBDIR\)\/make|include \$\(PTLIBDIR\)\/share\/ptlib\/make|g" \
-        ${destroot}${prefix}/share/ptlib/make/ptlib.mak \
-        ${destroot}${prefix}/share/ptlib/make/plugins.mak \
-        ${destroot}${prefix}/share/ptlib/make/unix.mak
+	reinplace "s|include \$\(PTLIBDIR\)\/make|include \$\(PTLIBDIR\)\/share\/ptlib\/make|g" \
+		${destroot}${prefix}/share/ptlib/make/ptlib.mak \
+		${destroot}${prefix}/share/ptlib/make/plugins.mak \
+		${destroot}${prefix}/share/ptlib/make/unix.mak
 }
