--- a/devel/h323plus/files/h323plus.pc.in
+++ b/devel/h323plus/files/h323plus.pc.in
@@ -7,7 +7,7 @@ Name: h323plus
 Description: h323plus library
 Version: @MAJOR_VERSION@.@MINOR_VERSION@.@BUILD_NUMBER@
 Requires:
-Requires.private: sdl >= 1.2, libssl, ptlib >= 2.12.1, expat
+Requires.private: libssl, ptlib >= 2.12.1
 Conflicts:
 Libs: -L${libdir} -lh323
 Libs.private: -lpthread -lrt -ldl -lm
