--- a/devel/ptlib/Portfile
+++ b/devel/ptlib/Portfile
@@ -4,20 +4,22 @@
 PortSystem			1.0
 
 name				ptlib
-version				2.10.9
+version				2.12.8
 categories			devel
 platforms			darwin
 license				BSD
 maintainers			gkorovin
 description			ptlib
-long_description	PTLib 2.10.9 fork for GNU Gatekeeper and H323Plus
+long_description	PTLib 2.12.8 fork for GNU Gatekeeper and H323Plus
 
 patch.pre_args		-p1
-patchfiles			01_fix_sched_yield.patch 02_install_version.patch 03_fix_ssl.patch 04_add_install_name.patch
+patchfiles			02_install_version.patch 04_add_install_name.patch
 
 fetch.type			git
 git.url				https://github.com/willamowius/ptlib
-git.branch			34c617943b707abe46c3c527323e2ac1159f8b35
+git.branch			0f0db0236ed09b0ea5f9fda8a9c2913103a794a8
+
+configure.args-append --disable-pulse
 
 build.target		optshared debugshared
 
